--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,32 +1,61 @@
 <div class="container">
-    <div class="card o-hidden border-0 shadow-lg my 5">
-        <div class="card-body p-0">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="p-5">
-                        <div class="text-center">
-                            <h1 class="h4 text-gray-900 mb-4">Crea una cuenta</h1>
-                        </div>
-                        <form class="user">
-                            <div class="form-group row">
-                                <div class="col-sm-6 mb-3 mb-sm-0">
-                                    <input type="text" class="form-control form-control-user" id="firstName" placeholder="Nombre">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <div class="card o-hidden border-0 shadow-lg my-5">
+                <div class="card-body p-0">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="p-5">
+                                <div class="text-center">
+                                    <h1 class="h4 text-gray-900 mb-4">Crea una cuenta</h1>
                                 </div>
-                                <div class="col-sm-6 mb-3 mb-sm-0">
-                                    <input type="text" class="form-control form-control-user" id="lastName" placeholder="Apellido">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <form class="user">
+                                            <div class="form-group row">
+                                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                                    <input type="text" class="form-control form-control-user" id="firstName" placeholder="Nombre">
+                                                </div>
+                                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                                    <input type="text" class="form-control form-control-user" id="lastName" placeholder="Apellido">
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <div class="col-sm-12 mb-3 mb-sm-0">
+                                                    <input type="email" class="form-control form-control-user" id="email" placeholder="Correo electrónico">
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <div class="col-sm-12 mb-3 mb-sm-0">
+                                                    <input type="text" class="form-control form-control-user" id="username" placeholder="Nombre de usuario">
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <div class="col-sm-12 mb-3 mb-sm-0">
+                                                    <input type="password" class="form-control form-control-user" id="password" placeholder="Contraseña">
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <div class="col-sm-12 mb-3 mb-sm-0">
+                                                    <input type="password" class="form-control form-control-user" id="verifyPassword" placeholder="Verifica la contraseña">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-3"></div>
+                                        </form>
+                                        <hr>
+                                        <div class="text-center">
+                                            <a href="#">¿Olvidaste tu contraseña?</a><br>
+                                            <a href="#">Ya tengo una cuenta</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </form>
-                        <hr>
-                        <div class="text-center">
-                            <a class="small" href="#">¿Olvidó su contraseña?</a>
-                        </div>
-                        <div class="text-center">
-                            <a class="small" href="#">¿Ya tiene una cuenta?</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="col-md-2"></div>
     </div>
 </div>
