Diseño de login

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -14,8 +14,8 @@
                                 <div class="text-center">
                                     <h1 class="h4 text-gray-900 mb-4">Crea una cuenta</h1>
                                 </div>
-                                <div class="alert alert-danger" role="alert">
-                                    El usuario ya existe
+                                <div id="errorMessage">
+
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
