--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -71,8 +71,8 @@
                                         </form>
                                         <hr>
                                         <div class="text-center">
-                                            <a href="#">¿Olvidaste tu contraseña?</a><br>
-                                            <a href="#">Ya tengo una cuenta</a>
+                                            <a [routerLink]="['/recover-password']" routerLinkActive="active">¿Olvidaste tu contraseña?</a><br>
+                                            <a [routerLink]="['/login']" routerLinkActive="active">Ya tengo una cuenta</a>
                                         </div>
                                     </div>
                                 </div>
